--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Build
         run: cargo build --verbose
 
-      - name: Run tests
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
+#      - name: Run tests
+#        uses: actions-rs/cargo@v1
+#        with:
+#          command: test
